{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 105,
  "lineage": "f1827724-21b7-f080-5d84-1160adccb16b",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:569023477847:instance/i-0124b9c5da76fd78e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0124b9c5da76fd78e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s-key-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-029c2716a2fd7c8cf"
              }
            ],
            "primary_network_interface_id": "eni-029c2716a2fd7c8cf",
            "private_dns": "ip-10-0-8-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.25",
            "public_ip": "54.87.233.94",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037d5e65bb24d4da5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081dfa54251c8e39b",
            "tags": {
              "Cluster": "k8s-cluster",
              "Name": "bastion-host",
              "Role": "bastion"
            },
            "tags_all": {
              "Cluster": "k8s-cluster",
              "Name": "bastion-host",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af14539fc231c8dc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "i-0124b9c5da76fd78e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:security-group/sg-0af14539fc231c8dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af14539fc231c8dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "569023477847",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "sg-0af14539fc231c8dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be47124d87acab10",
            "arn": "arn:aws:ec2:us-east-1:569023477847:elastic-ip/eipalloc-0be47124d87acab10",
            "domain": "vpc",
            "id": "eipalloc-0be47124d87acab10",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-91-108-184.compute-1.amazonaws.com",
            "public_ip": "98.91.108.184",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:internet-gateway/igw-0cd039eae6e5b76fc",
            "id": "igw-0cd039eae6e5b76fc",
            "owner_id": "569023477847",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-igw"
            },
            "tags_all": {
              "Name": "k8s-igw"
            },
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be47124d87acab10",
            "association_id": "eipassoc-0536110f18e0ef06b",
            "connectivity_type": "public",
            "id": "nat-0f5172ed0cbe78c0d",
            "network_interface_id": "eni-00c52162e1922e5e1",
            "private_ip": "10.0.8.220",
            "public_ip": "98.91.108.184",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-081dfa54251c8e39b",
            "tags": {
              "Name": "k8s-nat"
            },
            "tags_all": {
              "Name": "k8s-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:route-table/rtb-074d2bb9f0d658a21",
            "id": "rtb-074d2bb9f0d658a21",
            "owner_id": "569023477847",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5172ed0cbe78c0d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-private-rt"
            },
            "tags_all": {
              "Name": "k8s-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "rtb-074d2bb9f0d658a21",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:route-table/rtb-0c405f8f6a9ae3105",
            "id": "rtb-0c405f8f6a9ae3105",
            "owner_id": "569023477847",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd039eae6e5b76fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-public-rt"
            },
            "tags_all": {
              "Name": "k8s-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "rtb-0c405f8f6a9ae3105",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2e68f1e5f0fca3f",
            "region": "us-east-1",
            "route_table_id": "rtb-074d2bb9f0d658a21",
            "subnet_id": "subnet-0ad5a851b74a41f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.privatesubnet",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0278b32a2b680a8eb",
            "region": "us-east-1",
            "route_table_id": "rtb-074d2bb9f0d658a21",
            "subnet_id": "subnet-0c12cb7905c9ad3e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.privatesubnet",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bede4cd54d633465",
            "region": "us-east-1",
            "route_table_id": "rtb-074d2bb9f0d658a21",
            "subnet_id": "subnet-049f9492a3d8689e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.privatesubnet",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2e7ee87ba9af831",
            "region": "us-east-1",
            "route_table_id": "rtb-074d2bb9f0d658a21",
            "subnet_id": "subnet-03d1783088f2004d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.privateRT",
            "module.vpc.aws_subnet.privatesubnet",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e467fba138d20b1",
            "region": "us-east-1",
            "route_table_id": "rtb-0c405f8f6a9ae3105",
            "subnet_id": "subnet-081dfa54251c8e39b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07961b57a51724ecf",
            "region": "us-east-1",
            "route_table_id": "rtb-0c405f8f6a9ae3105",
            "subnet_id": "subnet-0ded1635a5d1ff79c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.publicRT",
            "module.vpc.aws_subnet.publicsubnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-0ad5a851b74a41f78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad5a851b74a41f78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "k8s-private-1",
              "Type": "private"
            },
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "subnet-0ad5a851b74a41f78",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-0c12cb7905c9ad3e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c12cb7905c9ad3e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Name": "k8s-private-2",
              "Type": "private"
            },
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "subnet-0c12cb7905c9ad3e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-049f9492a3d8689e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049f9492a3d8689e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-private-3",
              "Type": "private"
            },
            "tags_all": {
              "Name": "k8s-private-3",
              "Type": "private"
            },
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "subnet-049f9492a3d8689e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-03d1783088f2004d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d1783088f2004d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-private-4",
              "Type": "private"
            },
            "tags_all": {
              "Name": "k8s-private-4",
              "Type": "private"
            },
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "subnet-03d1783088f2004d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-081dfa54251c8e39b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081dfa54251c8e39b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "k8s-public-1",
              "Type": "public"
            },
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "subnet-081dfa54251c8e39b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-0ded1635a5d1ff79c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded1635a5d1ff79c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Name": "k8s-public-2",
              "Type": "public"
            },
            "vpc_id": "vpc-0cba3bd194430d196"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "569023477847",
            "id": "subnet-0ded1635a5d1ff79c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:vpc/vpc-0cba3bd194430d196",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081ce6f3052d3e034",
            "default_route_table_id": "rtb-0f88f37153ea70643",
            "default_security_group_id": "sg-0b97f91e74377a6f6",
            "dhcp_options_id": "dopt-4d320837",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cba3bd194430d196",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f88f37153ea70643",
            "owner_id": "569023477847",
            "region": "us-east-1",
            "tags": {
              "Name": "my-k8s-vpc"
            },
            "tags_all": {
              "Name": "my-k8s-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}